--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,12 +10,14 @@
       content="Diccionario de la Lengua de Señas Colombianas para busquedas avanzadas"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> 
+    <link href='https://unpkg.com/boxicons@2.0.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Diccionario de la LSC</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
+     
+    <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
   </body>
 </html>
